fixed header on small devices :octocat:

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -2,7 +2,7 @@
     background: $color;
     color: $background;
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
