--- a/src/styles/partials/_mediaQueries.scss
+++ b/src/styles/partials/_mediaQueries.scss
@@ -1,7 +1,6 @@
 /* Landscape phones */
 @media (min-width: 480px) {
     .header {
-        height: 80vh;
         &__h1 {
             font-size: 5.6rem;
         }
